fix: update active nav-link styles for improved visibility

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -170,8 +170,8 @@ blockquote p, blockquote p b {
     padding: 5px 20px;
 }
 
-.nav-link.active, .nav-link:focus {
-    font-weight: 500;
+.nav-link.active, .nav-link[aria-current="page"] {
+    font-weight: 600 !important;
 }
 
 .navbar-toggler {
